--- a/views/article.erb
+++ b/views/article.erb
@@ -1,4 +1,4 @@
-<article>
+<article class='column'>
   <a href='<%=article.permalink%>' class='permalink'>link</a>
   <em class='title'><%=article.title%></em>
   <time class='date'><%=article.date%></time>
