--- a/views/service.erb
+++ b/views/service.erb
@@ -10,9 +10,9 @@ document.write("<div class='debug'> w("+
 
   <header>
     <img src='images/services/services_mobile_logo.png' alt='blazing cloud'/>
-    <article class='introduction column'>
-    <em> Our Services </em>
-    <p> It's easy to say we value service - we'd rather demonstrate. <a href='#'>Give us a Call</a></p>
+    <article class='introduction '>
+    <em class='title' > Our Services </em>
+    <p> It's easy to say we value service - we'd rather demonstrate. <a href='mailto:info@blazingcloud.net'>Send us an Email</a></p>
     </article>
   </header>
 <nav>
@@ -20,26 +20,26 @@ document.write("<div class='debug'> w("+
 <section class='main'>
 <article class='column'>
 <img class='leader' src='images/services/services_strategy_design.png' alt='illuminating the essense from a maze of ideas'/>
-<em> Strategy &amp; Design </em>
+<em class='title'> Strategy &amp; Design </em>
 <p>We belive mobile is not just a device, but a lifestyle. Our
 multi-desciplinary team of designers...</p>
 </article>
 <article class='column'>
 <img class='leader' src='images/services/services_mobileapps.png' alt='native mobile applications leverage device strengths'/>
-<em> Mobile Apps</em>
+<em class='title'> Mobile Apps</em>
 <p>We belive mobile is not just a device, but a lifestyle. Our
 multi-desciplinary team of designers...</p>
 </article>
 <article class='column'>
 
 <img class='leader' src='images/services/services_mobilewebsites.png' alt='websites are avalible on the mobile device'/>
-<em> Mobile Websites</em>
+<em class='title'> Mobile Websites</em>
 <p>We belive mobile is not just a device, but a lifestyle. Our
 multi-desciplinary team of designers...</p>
 </article>
 <article class='column'>
 <img class='leader' src='images/services/services_convergent_experiences.png' alt='devices become connected through clouds'/>
-<em> Convergent Experiences </em>
+<em class='title'> Convergent Experiences </em>
 <p>We belive mobile is not just a device, but a lifestyle. Our
 multi-desciplinary team of designers...</p>
 
@@ -49,7 +49,7 @@ multi-desciplinary team of designers...</p>
   <img class='leader' src='images/services/services_mobile_logo.png' alt='blazing cloud'/>
   <section>
   <article class='column'>
-  <em> Services </em>
+  <em class='title'> Services </em>
   <ol>
     <li>Strategy &amp; Design</li>
     <li>Mobile Apps</li>
@@ -58,7 +58,7 @@ multi-desciplinary team of designers...</p>
   </ol>
   </article>
   <article class='column'>
-  <em> Classes </em>
+  <em class='title'> Classes </em>
   <ol>
     <li><time class='date'>Mar23</time>
     <a href="#">CSS for Web Applications</a></li>
@@ -69,7 +69,7 @@ multi-desciplinary team of designers...</p>
   </ol>
   </article>
   <article class='column'>
-  <em> Blog </em>
+  <em class='title'> Blog </em>
   <ol>
     <li><time class='date'>On Thursday</time>
     <a href="#">Closure and Sinatra</a></li>
@@ -79,7 +79,7 @@ multi-desciplinary team of designers...</p>
     
   </article>
   <article class='column'>
-  <em> Contact </em>
+  <em class='title'> Contact </em>
     <ol>
       <li>
       <abbr> E </abbr> info@blazingcloud.net
@@ -93,7 +93,7 @@ multi-desciplinary team of designers...</p>
     </ol>
   </article>
   <article class='column'>
-  <em> Twitter </em>
+  <em class='title'> Twitter </em>
     <time>On Friday</time>
     <p>
       @mebukar there's a link on the eventbrite page,
