--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,7 @@
 	<title></title>
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
   <link rel="stylesheet" href="assets/reset.css">
   <link rel="stylesheet" href="assets/main.css">
   <link rel="stylesheet" 
