--- a/public/responsive/base.css
+++ b/public/responsive/base.css
@@ -24,6 +24,7 @@ header .introduction p {
 /* part of my responsive grid */
 .column {
   float:left;
+  min-height:13em;
   width:98%;
   margin:2% 1%; 
 }
@@ -31,16 +32,13 @@ header .introduction p {
 clear:both;
 }
 
-header article > em,
 article > .leader {
   display:inline;
   float:left;
   width:35%
 }
-.title {
-  display:block;
-}
 article > .title {
+  display:block;
   font-weight:bold;
   font-size:1.5em;
 }
