--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,18 +7,34 @@
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
   <link rel="stylesheet" href="assets/reset.css">
+  <link rel="stylesheet" href="assets/fonts.css">
   <link rel="stylesheet" href="assets/main.css">
+  
+  <!-- default -->
   <link rel="stylesheet" 
-        href="assets/responsive/base.css"    >  <!-- phone -->
+        href="assets/responsive/base.css">
+  <!-- small devices -->
   <link rel="stylesheet" 
-        href="assets/responsive/base-landscape.css"  
+        href="assets/responsive/base-small.css"  
+        media='screen and (min-width:20em) and (max-width:48em) ' />
+  <!-- small landscape device -->
+  <link rel="stylesheet" 
+        href="assets/responsive/small/landscape.css"  
         media='screen and (min-width:30em) and (max-width:48em) ' />
+
+  <!-- wide devices -->
   <link rel="stylesheet" 
-        href="assets/responsive/tablet.css"  
+        href="assets/responsive/base-wide.css"  
+        media='screen and (min-width:48em)' />
+  <!-- wide tablet device -->
+  <link rel="stylesheet" 
+        href="assets/responsive/wide/tablet.css"  
         media='screen and (min-width:48em) and (max-width:64em)' />
+  <!-- wide desktop device -->
   <link rel="stylesheet" 
-        href="assets/responsive/desktop.css" 
+        href="assets/responsive/wide/desktop.css" 
         media='screen and (min-width:64em)' />
+
 </head>
 
 <body>
