--- a/views/service.erb
+++ b/views/service.erb
@@ -9,14 +9,23 @@ document.write("<div class='debug'> w("+
 </script>
 
   <header>
-    <img src='images/services/services_mobile_logo.png' alt='blazing cloud'/>
+  <div class='logo' 
+    alt='blazing cloud'></div>
+  <nav>
+  <ol>
+    <li>Services</li>
+    <li>Approach</li>
+    <li>Work</li>
+    <li>Team</li>
+    <li>Classes</li>
+    <li>Blog</li>
+  </ol>
+</nav>
     <article class='introduction '>
     <em class='title' > Our Services </em>
     <p> It's easy to say we value service - we'd rather demonstrate. <a href='mailto:info@blazingcloud.net'>Send us an Email</a></p>
     </article>
   </header>
-<nav>
-</nav>
 <section class='main'>
 <article class='column'>
 <img class='leader' src='images/services/services_strategy_design.png' alt='illuminating the essense from a maze of ideas'/>
