--- a/views/service.erb
+++ b/views/service.erb
@@ -55,7 +55,8 @@ multi-desciplinary team of designers...</p>
 </article>
 </section>
 <footer>
-  <img class='leader' src='images/services/services_mobile_logo.png' alt='blazing cloud'/>
+  <section class='bottom'>
+    <img src='images/services/services_mobile_logo.png' alt='blazing cloud'/>
   <section>
   <article class='column'>
   <em class='title'> Services </em>
@@ -112,7 +113,7 @@ http://t.co/330yW1Pe
     <a  href="#">Follow us</a> 
   </article>
   </section>
-
+  </section>
 </footer>
 
 
