--- a/views/service.erb
+++ b/views/service.erb
@@ -56,7 +56,7 @@ multi-desciplinary team of designers...</p>
 </section>
 <footer>
   <section class='bottom'>
-    <img src='images/services/services_mobile_logo.png' alt='blazing cloud'/>
+    <div class='bottom-logo' src='images/services/services_mobile_logo.png' alt='blazing cloud'/>
   <section>
   <article class='column'>
   <em class='title'> Services </em>
