--- a/views/service.erb
+++ b/views/service.erb
@@ -30,26 +30,26 @@ document.write("<div class='debug'> w("+
 <article class='column'>
 <img class='leader' src='images/services/services_strategy_design.png' alt='illuminating the essense from a maze of ideas'/>
 <em class='title'> Strategy &amp; Design </em>
-<p>We belive mobile is not just a device, but a lifestyle. Our
+<p>We believe mobile is not just a device, but a lifestyle. Our
 multi-desciplinary team of designers...</p>
 </article>
 <article class='column'>
 <img class='leader' src='images/services/services_mobileapps.png' alt='native mobile applications leverage device strengths'/>
 <em class='title'> Mobile Apps</em>
-<p>We belive mobile is not just a device, but a lifestyle. Our
+<p>We believe mobile is not just a device, but a lifestyle. Our
 multi-desciplinary team of designers...</p>
 </article>
 <article class='column'>
 
 <img class='leader' src='images/services/services_mobilewebsites.png' alt='websites are avalible on the mobile device'/>
 <em class='title'> Mobile Websites</em>
-<p>We belive mobile is not just a device, but a lifestyle. Our
+<p>We believe mobile is not just a device, but a lifestyle. Our
 multi-desciplinary team of designers...</p>
 </article>
 <article class='column'>
 <img class='leader' src='images/services/services_convergent_experiences.png' alt='devices become connected through clouds'/>
 <em class='title'> Convergent Experiences </em>
-<p>We belive mobile is not just a device, but a lifestyle. Our
+<p>We believe mobile is not just a device, but a lifestyle. Our
 multi-desciplinary team of designers...</p>
 
 </article>
