--- a/public/responsive/base-small.css
+++ b/public/responsive/base-small.css
@@ -2,5 +2,8 @@ nav {
   width:20em;
   margin:0 auto;
 }
-.bottom .logo {
+.bottom-logo {
+  background:url('/images/services/services_footer_logo.png') no-repeat;
+  width:20em;
+  height:72px;
 }
