--- a/views/service.erb
+++ b/views/service.erb
@@ -13,12 +13,12 @@ document.write("<div class='debug'> w("+
     alt='blazing cloud'></div>
   <nav>
   <ol>
-    <li>Services</li>
-    <li>Approach</li>
-    <li>Work</li>
-    <li>Team</li>
-    <li>Classes</li>
-    <li>Blog</li>
+    <li><a href='#' class='active'>Services</a></li>
+    <li><a href='#'>Approach</a></li>
+    <li><a href='#'>Work    </a></li>
+    <li><a href='#'>Team    </a></li>
+    <li><a href='#'>Classes </a></li>
+    <li><a href='#'>Blog    </a></li>
   </ol>
 </nav>
     <article class='introduction '>
@@ -57,7 +57,8 @@ multi-desciplinary team of designers...</p>
 <footer>
   <section class='bottom'>
     <div class='bottom-logo' src='images/services/services_mobile_logo.png' alt='blazing cloud'/>
-  <section>
+      <section>
+      <!--
   <article class='column'>
   <em class='title'> Services </em>
   <ol>
@@ -88,6 +89,7 @@ multi-desciplinary team of designers...</p>
   </ol>
     
   </article>
+  -->
   <article class='column'>
   <em class='title'> Contact </em>
     <ol>
@@ -101,17 +103,19 @@ multi-desciplinary team of designers...</p>
       <abbr> F </abbr> (415) 738 5407
       </li>
     </ol>
-  </article>
+    </article>
+    <!--
   <article class='column'>
   <em class='title'> Twitter </em>
     <time>On Friday</time>
     <p>
       @mebukar there's a link on the eventbrite page,
-but it is small --&gt; blazing cloud scholarship application
+but it is small &dash;&dash;&gt; blazing cloud scholarship application
 http://t.co/330yW1Pe
     </p>
     <a  href="#">Follow us</a> 
-  </article>
+    </article>
+    --> 
   </section>
   </section>
 </footer>
