--- a/public/responsive/base.css
+++ b/public/responsive/base.css
@@ -5,7 +5,7 @@ body {
 }
 a { color: rgb(226,143,86); font-weight:bold;}
 a:hover  { color: rgb(226,143,86); }
-a.active { color: rgb(220,124,58); }
+a.active { color: rgb(124,63,9); }	
 
 body,
 .main,
@@ -33,10 +33,17 @@ footer > section {
 }
 nav {
   margin:0 auto;
+  padding-left:1em;
+  padding-right:1em;
 }
 nav li {
   float:left;
   margin-right:1em;
+}
+nav li a {
+  font-size:0.8em;
+  text-decoration:none;
+  text-transform:uppercase;
 }
 .title {
   display:block;
@@ -58,6 +65,7 @@ p {
   clear:both;
   margin-bottom:1em;
   margin-left:1em;
+  margin-top:4em;
   width:100%;
   padding-bottom:1em;
   border-bottom: 1px solid rgb(221,219,212);
@@ -144,7 +152,7 @@ footer {
   display:block;
 }
 .bottom .column {
-  width:40%;
+  width:14em;
 }
 
 .debug {
