--- a/views/service.erb
+++ b/views/service.erb
@@ -1,24 +1,12 @@
-<script type='text/javascript'>
-//<![CDATA[
-document.write("<div class='debug'> w("+
-                screen.width   /16    +")-screen-h("+
-                screen.height  /16    +") -- w("+
-                window.innerWidth /16 +")-inner-window-h("+
-                window.innerHeight /16 +")</div>")
-//]]>
-</script>
 
   <header>
   <div class='logo' 
     alt='blazing cloud'></div>
   <nav>
   <ol>
-    <li><a href='#' class='active'>Services</a></li>
-    <li><a href='#'>Approach</a></li>
-    <li><a href='#'>Work    </a></li>
-    <li><a href='#'>Team    </a></li>
-    <li><a href='#'>Classes </a></li>
-    <li><a href='#'>Blog    </a></li>
+    <li><a  href='/'>Home</a></li>
+    <li><a class='active' href='/services'>Services</a></li>
+    <li><a href='/Blog'>Blog    </a></li>
   </ol>
 </nav>
     <article class='introduction '>
