--- a/public/responsive/base.css
+++ b/public/responsive/base.css
@@ -50,9 +50,12 @@ nav li a {
   font-family: pt-sans-narrow-bold;
   font-size:1.3em;
 }
-p {
+p{
   font-size:1em;
   font-family: roboto-condensed-bold;
+}
+code, pre {
+  font-family:courier;
 }
 /*
  *
@@ -100,18 +103,18 @@ clear:both;
   position:relative;
   margin:1em;
 }
-.main .column > .leader {
+.tile .column > .leader {
   position:absolute;
   margin: 0 0;
  
 }
-/* Align Title and P inside of main columns */
-.main .column > .title {
+/* Align Title and P inside of tile columns */
+.tile .column > .title {
   position:absolute;
   left:120px; /* pixels used here as font-sizes are different */
   top:0px;
 }
-.main .column > p {
+.tile .column > p {
   position:absolute;
   left:120px; /* pixels used here as font-sizes are different */
   top:4em;
@@ -159,4 +162,7 @@ footer {
 .debug {
 background:green;
 }
-
+/* blog */
+.blog .column {
+  width:100%;
+}
