commented responsive grid
commented base template

renamed css into convetion of 'grid' and 'tile'

a grid declares the intention for a set of simple tiles.

a tile can have it's width mutated in a later css include to
adjust how many columns exist in  the visual display of a device.

a grid begins a new column area.

by default there is a single column - more columns are created
by giving the tile a divisible size by the base wídth of the device
or media.

--- a/public/responsive/base-wide.css
+++ b/public/responsive/base-wide.css
@@ -8,16 +8,16 @@ nav li {
   float:left;
   margin-right:1em;
 }
-.bottom .column {
+.bottom .tile {
   width:10em;
 }
 
-.column {
+.grid .tile {
   width:42%
 }
 
 /* homepage */
-.services .column {
-  width:19em; /* 3 column */
+.services .tile {
+  width:19em; /* 3 tiles in grid */
 }
 
