--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -14,9 +14,9 @@
     </section>
   </header>
 
-
-    <section class='introduction main'>
-      <article class='column'>
+    <section class='main grid'>
+    <section class='about'>
+      <article class='tile'>
         <em>Blazing Cloud</em> 
         is a <i>design, strategy </i> and 
         <i>production</i>
@@ -25,15 +25,15 @@
         convergent experiences
         across devices
       </article>
-      <article class='column'>
+      <article class='tile'>
         <em class='title'>Want to talk about your project?</em>
         <p>
           <a href="mailto:info@blazingcloud.net">Email us.</a>
         </p>
       </article>
       </section> <!-- about section -->
-      <section class='services'>
-        <article class='column'>
+      <section class='grid services'>
+        <article class='tile'>
         <em class='title'>Strategy &amp; Design</em>
         <p>
           We believe mobile is not just a device, 
@@ -45,7 +45,7 @@
           every time.
           </p>
         </article>
-        <article class='column'>
+        <article class='tile'>
           <em class='title'>
             Mobile Apps
           </em>
@@ -55,7 +55,7 @@
           devices - iPhone, iPad, Android phones and
           tablets, and Windows Touch devices.</p>
         </article>
-        <article class='column'>
+        <article class='tile'>
         <em class='title'> Mobile Websites </em>
         <p>
           Research shows that mobile internet traffic
@@ -66,8 +66,8 @@
           devices could be participants.</p>
         </article>
       </section> <!-- services -->
-      <section class='community'>
-        <article class='column'>
+      <section class='grid community'>
+        <article class='tile'>
         <em class='title'>Blazing Cloud Classes</em>
         <p>
           We are firm believers in paying it forward.
@@ -86,7 +86,7 @@
             </ol>
             </section> <!-- upcoming -->
         </article>
-        <article class='column'>
+        <article class='tile'>
         <em class='title'>Talks</em>
         <p>
           We are often invited to speak at various
@@ -105,4 +105,5 @@
             </section> <!-- previous -->
         </article>
         </section> <!-- community -->
+      </section> <!-- main section -->
 
