--- a/views/service.erb
+++ b/views/service.erb
@@ -14,40 +14,38 @@
     <p> It's easy to say we value service - we'd rather demonstrate. <a href='mailto:info@blazingcloud.net'>Send us an Email</a></p>
     </article>
   </header>
-<section class='main tile'>
-<article class='column'>
-<img class='leader' src='images/services/services_strategy_design.png' alt='illuminating the essense from a maze of ideas'/>
-<em class='title'> Strategy &amp; Design </em>
-<p>We believe mobile is not just a device, but a lifestyle. Our
-multi-desciplinary team of designers...</p>
-</article>
-<article class='column'>
-<img class='leader' src='images/services/services_mobileapps.png' alt='native mobile applications leverage device strengths'/>
-<em class='title'> Mobile Apps</em>
-<p>We believe mobile is not just a device, but a lifestyle. Our
-multi-desciplinary team of designers...</p>
-</article>
-<article class='column'>
-
-<img class='leader' src='images/services/services_mobilewebsites.png' alt='websites are avalible on the mobile device'/>
-<em class='title'> Mobile Websites</em>
-<p>We believe mobile is not just a device, but a lifestyle. Our
-multi-desciplinary team of designers...</p>
-</article>
-<article class='column'>
-<img class='leader' src='images/services/services_convergent_experiences.png' alt='devices become connected through clouds'/>
-<em class='title'> Convergent Experiences </em>
-<p>We believe mobile is not just a device, but a lifestyle. Our
-multi-desciplinary team of designers...</p>
-
-</article>
-</section>
+  <section class='main grid'>
+  <article class='tile'>
+    <img class='leader' src='images/services/services_strategy_design.png' alt='illuminating the essense from a maze of ideas'/>
+    <em class='title'> Strategy &amp; Design </em>
+    <p>We believe mobile is not just a device, but a lifestyle. Our
+    multi-desciplinary team of designers...</p>
+  </article>
+  <article class='tile'>
+    <img class='leader' src='images/services/services_mobileapps.png' alt='native mobile applications leverage device strengths'/>
+    <em class='title'> Mobile Apps</em>
+    <p>We believe mobile is not just a device, but a lifestyle. Our
+    multi-desciplinary team of designers...</p>
+  </article>
+  <article class='tile'>
+    <img class='leader' src='images/services/services_mobilewebsites.png' alt='websites are avalible on the mobile device'/>
+    <em class='title'> Mobile Websites</em>
+    <p>We believe mobile is not just a device, but a lifestyle. Our
+    multi-desciplinary team of designers...</p>
+  </article>
+  <article class='tile'>
+    <img class='leader' src='images/services/services_convergent_experiences.png' alt='devices become connected through clouds'/>
+    <em class='title'> Convergent Experiences </em>
+    <p>We believe mobile is not just a device, but a lifestyle. Our
+    multi-desciplinary team of designers...</p>
+  </article>
+  </section>
 <footer>
-  <section class='bottom'>
+  <section class='bottom grid'>
     <div class='bottom-logo' src='images/services/services_mobile_logo.png' alt='blazing cloud'/>
       <section>
       <!--
-  <article class='column'>
+  <article class='tile'>
   <em class='title'> Services </em>
   <ol>
     <li>Strategy &amp; Design</li>
@@ -56,7 +54,7 @@ multi-desciplinary team of designers...</p>
     <li>Convergent Experiences</li>
   </ol>
   </article>
-  <article class='column'>
+  <article class='tile'>
   <em class='title'> Classes </em>
   <ol>
     <li><time class='date'>Mar23</time>
@@ -67,7 +65,7 @@ multi-desciplinary team of designers...</p>
     <a href="#">Prosidy Chat and you</a></li>
   </ol>
   </article>
-  <article class='column'>
+  <article class='tile'>
   <em class='title'> Blog </em>
   <ol>
     <li><time class='date'>On Thursday</time>
@@ -78,7 +76,7 @@ multi-desciplinary team of designers...</p>
     
   </article>
   -->
-  <article class='column'>
+  <article class='tile'>
   <em class='title'> Contact </em>
     <ol>
       <li>
@@ -93,7 +91,7 @@ multi-desciplinary team of designers...</p>
     </ol>
     </article>
     <!--
-  <article class='column'>
+  <article class='tile'>
   <em class='title'> Twitter </em>
     <time>On Friday</time>
     <p>
