--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,9 +17,11 @@
 </script>
   <link rel="stylesheet" href="assets/reset.css">
   <link rel="stylesheet" href="assets/fonts.css">
-  <link rel="stylesheet" href="assets/main.css">
+  <link rel="stylesheet" href="assets/responsive/grid.css">
   
-  <!-- default -->
+  <!-- default grid - expect this to get adjusted for different devices-->
+  <link rel="stylesheet" href="assets/responsive/grid.css">
+  <!-- default device-->
   <link rel="stylesheet" 
         href="assets/responsive/base.css">
   <!-- small devices -->
