typo - url must be lowercase at the moment
all pages have at least one header - with nav

this header nav needs to become a helper that specifies
which page is active

--- a/views/blog.erb
+++ b/views/blog.erb
@@ -1,4 +1,13 @@
-<header>
+  <header>
+  <div class='logo' 
+    alt='blazing cloud'></div>
+  <nav>
+  <ol>
+    <li><a href='/'>Home</a></li>
+    <li><a href='/services'>Services</a></li>
+    <li><a class='active' href='/blog'>Blog    </a></li>
+  </ol>
+</nav>
 </header>
 <section class='main blog'>
   <%=articles%>
