--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -6,10 +6,12 @@
   <ol>
     <li><a class='active' href='/'>Home</a></li>
     <li><a href='/services'>Services</a></li>
-    <li><a href='/Blog'>Blog    </a></li>
+    <li><a href='/blog'>Blog    </a></li>
   </ol>
 </nav>
-    <section class='brand introduction'>
+  </header>
+  <header>
+    <section class='main brand introduction'>
     <h1> We handcraft mobile experiences.</h1>
     </section>
   </header>
