--- a/views/service.erb
+++ b/views/service.erb
@@ -6,7 +6,7 @@
   <ol>
     <li><a  href='/'>Home</a></li>
     <li><a class='active' href='/services'>Services</a></li>
-    <li><a href='/Blog'>Blog    </a></li>
+    <li><a href='/blog'>Blog    </a></li>
   </ol>
 </nav>
     <article class='introduction '>
