--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -9,14 +9,15 @@
     <li><a href='/blog'>Blog    </a></li>
   </ol>
 </nav>
-  </header>
+</header>
+
   <header>
     <section class='main brand introduction'>
     <h1> We handcraft mobile experiences.</h1>
     </section>
   </header>
 
-    <section class='main grid'>
+    <section class='homepage main grid'>
     <section class='about'>
       <article class='tile'>
         <em>Blazing Cloud</em> 
@@ -34,7 +35,7 @@
         </p>
       </article>
       </section> <!-- about section -->
-      <section class='grid services'>
+      <section class='grid strategy'>
         <article class='tile'>
         <em class='title'>Strategy &amp; Design</em>
         <p>
