--- a/views/service.erb
+++ b/views/service.erb
@@ -14,7 +14,7 @@
     <p> It's easy to say we value service - we'd rather demonstrate. <a href='mailto:info@blazingcloud.net'>Send us an Email</a></p>
     </article>
   </header>
-  <section class='main grid'>
+  <section class='services main grid'>
   <article class='tile'>
     <img class='leader' src='images/services/services_strategy_design.png' alt='illuminating the essense from a maze of ideas'/>
     <em class='title'> Strategy &amp; Design </em>
