--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -1,23 +1,34 @@
-
-  <header>
-  <div class='logo' 
-    alt='blazing cloud'></div>
+<div class='brand-texture'>
+</div>
+<header>
   <nav>
   <ol>
     <li><a class='active' href='/'>Home</a></li>
     <li><a href='/services'>Services</a></li>
     <li><a href='/blog'>Blog    </a></li>
   </ol>
-</nav>
-</header>
-
-  <header>
-    <section class='main brand introduction'>
-    <h1> We handcraft mobile experiences.</h1>
-    </section>
+  </nav>
+  <div class='branding'>
+    <div class='logo' 
+      alt='blazing cloud'>
+    </div>
+  <div style='clear:both'></div>
+    <div class='cutout'>
+    </div>
+    <div class='clouds'>
+    </div>
+     <center class='pitch title'> We handcraft mobile experiences.</center>
+    <div class='mobiles'>
+    </div>
+  </div>
   </header>
-
-    <section class='homepage main grid'>
+<section class='homepage main grid'>
+     <section class=''>
+     <article class=' introduction'> 
+     <h1> We handcraft mobile experiences.</h1>
+      </article>
+      </section>
+    <hr class='underline'/>
     <section class='about'>
       <article class='tile'>
         <em>Blazing Cloud</em> 
@@ -35,6 +46,7 @@
         </p>
       </article>
       </section> <!-- about section -->
+        <hr class='underline'/>
       <section class='grid strategy'>
         <article class='tile'>
         <em class='title'>Strategy &amp; Design</em>
@@ -68,8 +80,9 @@
           will not particpate in the same way, all
           devices could be participants.</p>
         </article>
-      </section> <!-- services -->
-      <section class='grid community'>
+        </section> <!-- services -->
+      <hr class='underline'/>
+      <section class='grid community '>
         <article class='tile'>
         <em class='title'>Blazing Cloud Classes</em>
         <p>
