--- a/views/service.erb
+++ b/views/service.erb
@@ -8,12 +8,12 @@
     <li><a class='active' href='/services'>Services</a></li>
     <li><a href='/blog'>Blog    </a></li>
   </ol>
-</nav>
-    <article class='introduction '>
+    <article class='introduction underline '>
     <em class='title' > Our Services </em>
     <p> It's easy to say we value service - we'd rather demonstrate. <a href='mailto:info@blazingcloud.net'>Send us an Email</a></p>
     </article>
-  </header>
+</nav>
+    </header>
   <section class='services main grid'>
   <article class='tile'>
     <img class='leader' src='images/services/services_strategy_design.png' alt='illuminating the essense from a maze of ideas'/>
