--- a/public/responsive/small/landscape.css
+++ b/public/responsive/small/landscape.css
@@ -1,13 +1,8 @@
-/* part of my responsive grid */
-.tile {
-  width:42%;
-}
-.introduction {
-  min-height:1em;
-}
-.tile {
-  min-height:18em;
-}
 .debug {
 background:blue;
 }
+.branding .mobiles {
+  background-image:url('/images/branding/mobiles-480.png');
+  height: 15em;
+}
+
