--- a/views/layout.erb
+++ b/views/layout.erb
@@ -28,11 +28,10 @@
   <link rel="stylesheet" 
         href="assets/responsive/base-small.css"  
         media='screen and (min-width:20em) and (max-width:48em) ' />
-  <!-- small landscape device 
+  <!-- small landscape device -->
   <link rel="stylesheet" 
         href="assets/responsive/small/landscape.css"  
         media='screen and (min-width:30em) and (max-width:48em) ' />
-        -->
   <!-- wide devices -->
   <link rel="stylesheet" 
         href="assets/responsive/base-wide.css"  
