proper underline - gave it a main section

--- a/views/service.erb
+++ b/views/service.erb
@@ -9,12 +9,15 @@
     <li><a href='/blog'>Blog    </a></li>
   </ol>
 </nav>
-    </header>
+</header>
+  <section class='main'>
+  <article class='introduction '>
+  <em class='title' > Our Services </em>
+  <p> It's easy to say we value service - we'd rather demonstrate. <a href='mailto:info@blazingcloud.net'>Send us an Email</a></p>
+  </article>
+  <hr class='underline'/>
+  </section>
   <section class='services main grid'>
-    <article class='introduction underline '>
-    <em class='title' > Our Services </em>
-    <p> It's easy to say we value service - we'd rather demonstrate. <a href='mailto:info@blazingcloud.net'>Send us an Email</a></p>
-    </article>
   <article class='tile'>
     <img class='leader' src='images/services/services_strategy_design.png' alt='illuminating the essense from a maze of ideas'/>
     <em class='title'> Strategy &amp; Design </em>
